update step six verbiage

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <p>6</p>
                     <i class="uil uil-check"></i>
                 </div>
-                <p class="text">Order Arrived</p>
+                <p class="text">Order Picked</p>
             </li>
         </ul>
 
